<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".ValnOrCamp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:text="@string/i_am"
            android:textColor="#2c6e49"
            android:textSize="100px"
            android:textStyle="italic" />

        <Button
            android:id="@+id/VolunteerButton"
            android:text="@string/volunteer"
            android:textSize="60px"
            android:padding="10dp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="#2c6e49"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/CampButton"
            android:text="@string/camp"
            android:textSize="60px"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:background="#2c6e49"
            android:layout_marginTop="405dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_centerHorizontal="true"
            />

</RelativeLayout>