<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_gradient"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <LinearLayout
            android:id="@+id/linLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:text="Wfeer"
                android:gravity="center"
                android:textSize="45sp"
                android:textStyle="italic"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:text="Volunteer Information"
                android:textSize="50px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="#57788E"
                />

            <!-- Name Label -->

            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/name_editText"
                android:autofillHints="" />


            <!-- Address Label -->

            <EditText android:id="@+id/input_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/address_editText"
                android:autofillHints="" />



            <!--  Email Label -->

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_editText"
                android:autofillHints="" />



            <!-- mobile number -->

            <EditText android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/mobile_number_editText"
                android:autofillHints="" />


            <!-- Password Label -->

            <EditText android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="Age"
                android:autofillHints="" />


            <!-- Password Re-enter Label -->

            <EditText android:id="@+id/input_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="ID"
                android:autofillHints="" />




            <!-- Signup Button -->

            <!--    <TextView android:id="@+id/link_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="Already a member? Login"
                    android:gravity="center"
                    android:textSize="16dip"/>-->

        </LinearLayout>

        <TextView
            android:id="@+id/some_wrong_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#CB0550"
            android:textSize="40px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="455dp"
            />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="520dp"
            android:layout_centerHorizontal="true"
            android:text="@string/submit_button"
            />
    </RelativeLayout>


</ScrollView>